--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,8 @@
   "dependencies": {
     "bootstrap": "~3.1.1",
     "marionette": "~1.7.1",
-    "requirejs": "~2.1.11"
+    "requirejs": "~2.1.11",
+//    "dustjs-linkedin-helpers": "~1.2.0",
+    "dustjs-linkedin": "~2.3.4"
   }
 }
