switch templating engine from dust to mustache

--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,6 @@
     "marionette": "~1.7.1",
     "requirejs": "~2.1.11",
     "requirejs-text": "~2.0.10",
-    "dustjs-linkedin": "~2.3.4",
-    "requirejs-text": "~2.0.10"
+    "mustache": "~0.8.1"
   }
 }
