--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.0",
   "description": "a blog app",
   "main": "server.js",
+  "engines": ["node >= 0.10.26"],
+  "private" : true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -10,6 +12,9 @@
   "author": "Oded Sagir",
   "license": "MIT",
   "dependencies": {
-    "express": "latest"
+    "express": "latest",
+    "poet": "^1.0.2",
+    "jade": "^1.3.1",
+    "consolidate": "^0.10.0"
   }
 }
